fixeD: M edge bug with z-index

--- a/src/Components/Hero/HeroCont.module.scss
+++ b/src/Components/Hero/HeroCont.module.scss
@@ -30,7 +30,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 3;
+    z-index: 1;
     width: 80%;
     padding: 20px;
     text-align: center;
